# uwubot

./: CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-APACHE-UWU  LICENSE-MIT-UWU  README.md
.github/workflows/: ci.yml
src/: bot.rs  cli.rs  config.rs  lib.rs  main.rs  uwu.rs
src/bot/: event_handler.rs
