[package]
name = "uwubot"
version = "0.1.0"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6.5"
color-eyre = "0.5.10"
structopt = "0.3.21"
uwuify = "0.2.0"
serenity = { version = "0.10.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
